# task-memo

./: .editorconfig  .eslintrc.json  README.md  nuxt.config.ts  package.json
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/apis/: BookmarkAPI.ts  ReportAPI.ts  TagAPI.ts  TagGroupAPI.ts  useBookmarkAPI.ts  useReportAPI.ts  useTagAPI.ts  useTagGroup.ts  useTagGroupAPI.ts
src/assets/css/: index.scss  nuxt.scss  primevue.scss
src/components/: TagTree.vue  TagTreeNested.vue  TagTreeRender.vue
src/components/apps/: AppHeader.vue
src/components/bookmarkLists/: BookmarkEditDialog.vue  BookmarkItem.vue  BookmarkList.vue  BookmarkRenderer.vue
src/components/reports/: ReportEditBox.vue  ReportPanel.vue  ReportShowBox.vue  ReportTagButtonGroup.vue  ReportTagEditDialog.vue  ReportTagInput.vue  TagEditDialog.vue  TagPanel.vue
src/components/tagTrees/: TagEditDialog.vue  TagGroupEditDialog.vue  TagGroupItem.vue  TagItem.vue  TagTree.vue  TagTreeRender.vue
src/composables/: useTestSeeder.ts  useToast.ts
src/composables/reports/: useReportTagAction.ts  useTagTree.ts  useTagTreeAction.ts
src/databases/: DBUtil.ts  Database.ts  db.ts
src/databases/libs/: BuildinMigrationProvider.ts  TauriSqliteDialect.ts  TauriSqliteDialectConfig.ts  TauriSqliteDriver.ts
src/databases/migrations/: 20220623_create_init_table.ts  20220623_create_persons_table.ts
src/databases/models/: Bookmark.ts  Person.ts  Persons.ts  Report.ts  (+3 more)
src/pages/: index.vue  test.vue
src/plugins/: primevue.ts
src/store/: useBookmarkStore.ts  useTagStore.ts
